# cbs-open-data_mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/instructions/: cbs_mcp.instructions.md
src/: __init__.py  cbs_open_data_client.py  cbs_open_data_mcp_server.py
tests/: test_cbs_open_data_client.py
